{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 56,
  "lineage": "7734cc0e-94c1-9ad0-4a63-64b7bd68ad38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c58eee14ae90e61f",
            "owner_id": "560001942613",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003dc5016bb964c18",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demi_eks_route_table",
              "kubernetes.io/cluster/demi_eks_cluster": "shared"
            },
            "vpc_id": "vpc-0bb7bb4e60d7d5cd1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb8435b6c63b2050",
            "route_table_id": "rtb-0c58eee14ae90e61f",
            "subnet_id": "subnet-0d4dd25fb61ad582b"
          },
          "dependencies": [
            "aws_route_table.demo",
            "aws_subnet.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094eadc37e7241013",
            "route_table_id": "rtb-0c58eee14ae90e61f",
            "subnet_id": "subnet-001f382a97938e85c"
          },
          "dependencies": [
            "aws_route_table.demo",
            "aws_subnet.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ac5a6bae5e334ef",
            "route_table_id": "rtb-0c58eee14ae90e61f",
            "subnet_id": "subnet-0c96d49bdfdb9e694"
          },
          "dependencies": [
            "aws_route_table.demo",
            "aws_subnet.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560001942613:security-group/sg-0207c4ec3c714ad0b",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0207c4ec3c714ad0b",
            "ingress": [],
            "name": "demi_eks_cluster_sg",
            "name_prefix": "",
            "owner_id": "560001942613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demi_eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb7bb4e60d7d5cd1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2987990672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0207c4ec3c714ad0b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.demo-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560001942613:subnet/subnet-0d4dd25fb61ad582b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.24.0/24",
            "id": "subnet-0d4dd25fb61ad582b",
            "map_public_ip_on_launch": true,
            "owner_id": "560001942613",
            "tags": {
              "Name": "demi_eks_subnets",
              "kubernetes.io/cluster/demi_eks_cluster": "shared"
            },
            "vpc_id": "vpc-0bb7bb4e60d7d5cd1"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560001942613:subnet/subnet-001f382a97938e85c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.30.25.0/24",
            "id": "subnet-001f382a97938e85c",
            "map_public_ip_on_launch": true,
            "owner_id": "560001942613",
            "tags": {
              "Name": "demi_eks_subnets",
              "kubernetes.io/cluster/demi_eks_cluster": "shared"
            },
            "vpc_id": "vpc-0bb7bb4e60d7d5cd1"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560001942613:subnet/subnet-0c96d49bdfdb9e694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.30.26.0/24",
            "id": "subnet-0c96d49bdfdb9e694",
            "map_public_ip_on_launch": true,
            "owner_id": "560001942613",
            "tags": {
              "Name": "demi_eks_subnets",
              "kubernetes.io/cluster/demi_eks_cluster": "shared"
            },
            "vpc_id": "vpc-0bb7bb4e60d7d5cd1"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}